# kaggle-rogii-wellbore-2026

./: .gitignore  AGENT_BRIEF.md  CURRENT_STRATEGY.md  PATCH_NOTES.md  README.md  pyproject.toml  requirements.txt
notebooks/: rogii_baseline_submission.py
scripts/: audit_data.py  build_kaggle_kernel.py  build_meta_training_set.py  make_submission.py  plot_oof_worst_wells.py  run_oof_validation.py  train_meta_learner.py  validate_baseline.py
src/rogii_baseline/: __init__.py  audit.py  baseline.py  data.py  diagnostics.py  formations.py  oof.py  validation.py
